--- a/resources/less/style-1.0/-common/buttons/button.less
+++ b/resources/less/style-1.0/-common/buttons/button.less
@@ -60,7 +60,8 @@
         border: none;
         color: white;
 
-        &:hover {
+        &:hover,
+        &:focus {
             background: @green;
         }
         &:active {
@@ -81,7 +82,8 @@
         border: none;
         color: white;
 
-        &:hover {
+        &:hover,
+        &:focus {
             background: @lightred;
         }
         &:active {
@@ -111,7 +113,8 @@
         transition-duration: 0.3s, 0.3s;
 
         &:hover,
-        &:active {
+        &:active,
+        &:focus  {
             border-color: @lightgreen;
             background: white;
             color: black;
