--- a/resources/less/style-1.0/book/author.less
+++ b/resources/less/style-1.0/book/author.less
@@ -2,6 +2,7 @@
     margin-left: 25px;
     margin-bottom: 15px;
 
+    font-size: 16px;
     color: @darkergrey;
 
     @media screen and (max-width: @md) {
