--- a/resources/less/style-1.0/book/buttons.less
+++ b/resources/less/style-1.0/book/buttons.less
@@ -3,7 +3,13 @@
     margin-bottom: 20px;
 
     &__element {
+        box-sizing: border-box;
         margin-bottom: 15px;
+        font-size: 16px;
+
+        &_small {
+            font-size: 12px;
+        }
 
         &:last-child {
             margin-bottom: 0;
@@ -64,7 +70,7 @@
     }
 
     @media screen and (max-width: @md) {
-        margin-left: 45px;
+        padding: 0 30px;
 
         &__element {
             margin-bottom: 0;
@@ -77,14 +83,31 @@
     }
 
     @media screen and (max-width: @sm) {
+        flex-wrap: wrap;
         margin-left: 0;
+        padding: 0;
 
         &__element {
             margin-bottom: 10px;
             margin-right: 0;
 
+            &_small {
+                font-size: 14px;
+            }
+
             &:last-child {
                 margin-bottom: 0;
+            }
+        }
+    }
+
+    @media screen and (max-width: 280px) {
+        &__element {
+            margin-bottom: 10px;
+            margin-right: 0;
+
+            &_small {
+                font-size: 12px;
             }
         }
     }
