--- a/resources/less/style-1.0/book/review/title.less
+++ b/resources/less/style-1.0/book/review/title.less
@@ -1,7 +1,5 @@
 .review-title {
-    visibility: hidden;
-    height: 0;
-    box-sizing: border-box;
+    margin-bottom: 10px;
     font-weight: bold;
 
     @media screen and (max-width: @sm) {
