--- a/resources/less/style-1.0/-common/pagination/pagination.less
+++ b/resources/less/style-1.0/-common/pagination/pagination.less
@@ -6,6 +6,14 @@
     display: flex;
     flex-direction: row;
 
+    @media screen and (max-width: @md) {
+        font-size: 16px;
+    }
+
+    @media screen and (max-width: @sm) {
+        font-size: 14px;
+    }
+
     &__element {
         display: block;
 
@@ -24,6 +32,18 @@
 
         &:last-child {
             margin-right: 0;
+        }
+
+        @media screen and (max-width: @md) {
+            margin-right: 5px;
+
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+
+        @media screen and (max-width: @sm) {
+            padding: 8px 5px;
         }
 
         &:hover {
@@ -49,6 +69,20 @@
             &:hover {
                 background: transparent;
                 cursor: auto;
+            }
+        }
+
+        &_text {
+            @media screen and (max-width: @md) {
+                display: none;
+            }
+        }
+
+        &_symbol {
+            display: none;
+
+            @media screen and (max-width: @md) {
+                display: block;
             }
         }
 
