--- a/resources/less/style-1.0/-common/pagination/pagination.less
+++ b/resources/less/style-1.0/-common/pagination/pagination.less
@@ -86,7 +86,7 @@
             }
         }
 
-        &[disabled="true"] {
+        &[disabled="disabled"] {
             cursor: auto;
             color: #bcbcbc;
 
